fix scroll on mobile

--- a/jsappapi/2.3.2/interfaces/material.css
+++ b/jsappapi/2.3.2/interfaces/material.css
@@ -26,6 +26,7 @@ html,body {
     font-family: 'Inter', Arial, sans-serif;
     color: var(--foreground);
     user-select: none;
+    overscroll-behavior: contain
 }
 
 body {
